AB#208916: product feature brand shape overlap fix

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/product-feature/_product-feature.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/product-feature/_product-feature.scss
@@ -107,6 +107,8 @@
   &__product_text {
     flex: 0 0 auto;
     max-width: 50%;
+    position: relative;
+    z-index: 2;
 
     & .h1__link {
       font-family: variable(primary-font);
